@@ -4,7 +4,7 @@
 
 bool test_seq_03(FastAccelStepper *stepper, struct test_seq_s *seq,
                  uint32_t time_ms) {
-  stepper->setSpeed(40);
+  stepper->setSpeedInUs(40);
   stepper->setAcceleration(10000);
   seq->u32_1 = 1;
   seq->state++;
