@@ -9,7 +9,7 @@ bool test_seq_05(FastAccelStepper *stepper, struct test_seq_s *seq,
                  uint32_t time_ms) {
   switch (seq->state & 15) {
     case 0:  // INIT
-      stepper->setSpeed(40);
+      stepper->setSpeedInUs(40);
       stepper->setAcceleration(1000000);
       seq->u32_1 = time_ms;
       seq->state++;
@@ -18,7 +18,7 @@ bool test_seq_05(FastAccelStepper *stepper, struct test_seq_s *seq,
       if (time_ms - seq->u32_1 >= DT) {
         if ((seq->state & 0xfff0) == (16 * 800)) {
           seq->state = 7;
-          stepper->setSpeed(1000);
+          stepper->setSpeedInUs(1000);
           stepper->setAcceleration(10000);
           stepper->move(-800);
           break;
